added canvas and angular flex

--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,3 +1,7 @@
-<p>
-  main works!
-</p>
+
+<div class="container-fluid" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+    <div fxFlex="20%" class="left-panel" style="background-color: #323232;"><div class="menu" ></div></div>
+    <div fxFlex="60%" class="canvas-panel"><app-canvas></app-canvas></div>
+    <div fxFlex="20%" class="right-panel" style="background-color: aquamarine;"><div class="chat" ></div></div>
+</div>
+
