--- a/frontend/src/app/main/canvas/canvas.component.html
+++ b/frontend/src/app/main/canvas/canvas.component.html
@@ -1,3 +1,3 @@
-<p>
-  canvas works!
-</p>
+<div #canvasDiv style="width: 100%; height: 100vh">
+  <canvas #canvas style="background-color: white"></canvas>
+</div>
