--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
     <div fxFlex="20%" class="left-panel"><app-user-list></app-user-list></div>
     <div fxFlex="60%" class="canvas-panel"><app-canvas></app-canvas></div>
     <div fxFlex="20%" class="right-panel" style="border-left: 1px solid rgba(0,0,0,0.30)"><app-chat></app-chat></div>
