fixed join params added room creation

--- a/frontend/src/app/main/chat/chat.component.html
+++ b/frontend/src/app/main/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div style="height: 90%; background-color: #323232">
-  <mat-list style="overflow-x: hidden; overflow-y: scroll; -ms-word-break: break-all;word-break: break-all;: break-word; white-space: pre-line">
+  <mat-list style="overflow-x: hidden; overflow-y: auto; -ms-word-break: break-all;word-break: break-all;: break-word; white-space: pre-line">
     <mat-list-item *ngFor="let message of messages" style="color:white">
       {{message}}
     </mat-list-item>
