--- a/frontend/src/app/lobby/lobby.component.html
+++ b/frontend/src/app/lobby/lobby.component.html
@@ -1,10 +1,10 @@
 <div style="width: 100%; height: 100vh;background-color: #323232">
-<div style="width: 80%; margin: auto; text-align: center; padding-top: 300px">
+  <div style="width: 80%; margin: auto; text-align: center; padding-top: 200px">
 
   <mat-card style="width: 50%; margin: auto">
-    <app-room-list></app-room-list>
+    <router-outlet></router-outlet>
   </mat-card>
 
-</div>
+  </div>
 </div>
 
