--- a/frontend/src/app/lobby/room-list/room-list.component.html
+++ b/frontend/src/app/lobby/room-list/room-list.component.html
@@ -1,13 +1,25 @@
-<mat-form-field>
-<input matInput #room id="room" type="text" (keyup.enter)="selectRoom(room)">
-<mat-hint>asmfdsmkg</mat-hint>
-<mat-error *ngIf="true">
-  Please enter a valid room name
-</mat-error>
-</mat-form-field>
-<button mat-raised-button (click)="selectRoom(room)">Select Room</button>
 
-<div *ngFor="let room of activeRooms">
-  <p style="color:red">{{room}}</p>
+
+<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" style="height: 40vh;">
+  <div fxFlex="60%" class="left-panel">
+    <mat-list class="room-list" style="overflow-y: auto; height: 100%">
+      <mat-list-item (click)="openJoin(room)" *ngFor="let room of activeRooms">
+        <mat-card>
+          <div class="room">
+          {{room}}
+          </div>
+        </mat-card>
+      </mat-list-item>
+    </mat-list>
+  </div>
+  <div fxFlex="40%" class="right-panel" style="border-left: 1px solid rgba(0,0,0,.30)">
+    <mat-list>
+      <mat-list-item><button mat-raised-button>Join</button></mat-list-item>
+      <mat-list-item><button mat-raised-button>Enter Key</button></mat-list-item>
+      <mat-list-item><button mat-raised-button (click)="openCreate()">Create</button></mat-list-item>
+    </mat-list>
+  </div>
 </div>
+
+
 
