major changes:  merged api and socket, added auth in the socket connection, fixed join and create functions and added a fallback for the game status

--- a/frontend/src/app/lobby/room-list/room-list.component.html
+++ b/frontend/src/app/lobby/room-list/room-list.component.html
@@ -14,7 +14,7 @@
   </div>
   <div fxFlex="40%" class="right-panel" style="border-left: 1px solid rgba(0,0,0,.30)">
     <mat-list>
-      <mat-list-item><button mat-raised-button>Join</button></mat-list-item>
+      <mat-list-item><button mat-raised-button (click)="openJoin('')">Join</button></mat-list-item>
       <mat-list-item><button mat-raised-button>Enter Key</button></mat-list-item>
       <mat-list-item><button mat-raised-button (click)="openCreate()">Create</button></mat-list-item>
     </mat-list>
