--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -4,6 +4,6 @@
     <div fxFlex="60%" class="canvas-panel">
       <app-canvas></app-canvas>
     </div>
-    <div fxFlex="20%" class="right-panel" style="border-left: 1px solid rgba(0,0,0,0.30)"><app-chat></app-chat></div>
+    <div fxFlex="20%" class="right-panel" style="height: 100vh; border-left: 1px solid rgba(0,0,0,0.30)"><app-chat></app-chat></div>
 </div>
 
