--- a/frontend/src/app/main/canvas/canvas.component.css
+++ b/frontend/src/app/main/canvas/canvas.component.css
@@ -1,6 +1,20 @@
 
 .color-picker{
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: .5rem;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+#color-picker-wrapper{
+  cursor: pointer;
+}
+
+
+.tool-box{
+  background-color: rgba(0,0,0,0.15);
 }
 
 canvas{
