--- a/frontend/src/app/main/user-list/user-list.component.html
+++ b/frontend/src/app/main/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div style="background-color: #323232; height: 100%">
-  <div *ngFor="let user of userList">
-    <mat-card>{{user}}</mat-card>
+  <div *ngFor="let user of userList; let i = index">
+    <mat-card [style.backgroundColor]="(i+1) === currentTurn ? 'gray' : 'white'">{{user}} {{currentTurn}} {{i}}</mat-card>
   </div>
 </div>
