added a score system and added a name holder in chat as a temporary fix

--- a/frontend/src/app/lobby/room-list/join/join.component.html
+++ b/frontend/src/app/lobby/room-list/join/join.component.html
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <mat-form-field>
-        <input type="text"
+        <input type="password"
                id="roomPassword"
                class="form-control"
                name="roomPassword"
