--- a/frontend/src/app/lobby/wait/wait.component.html
+++ b/frontend/src/app/lobby/wait/wait.component.html
@@ -2,7 +2,7 @@
   <mat-list-item *ngFor="let user of activeUserList">
     <mat-card>
       <div class="room">
-        {{user}}
+        {{user.userName}}
       </div>
     </mat-card>
   </mat-list-item>
