--- a/frontend/src/app/lobby/room-list/create/create.component.html
+++ b/frontend/src/app/lobby/room-list/create/create.component.html
@@ -23,7 +23,7 @@
 
     <div class="form-group">
       <mat-form-field>
-        <input type="text"
+        <input type="password"
                id="roomPassword"
                class="form-control"
                name="roomPassword"
