--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,9 @@
-<h1>OOPS!</h1>
-<h3>404 Page not found!</h3>
+<div style="width: 100%; height: 100vh;background-color: #323232">
+  <div style="width: 80%; margin: auto; text-align: center; padding-top: 200px">
+    <mat-card style="width: 50%; margin: auto">
+      <h1>404</h1>
+      <h2>PAGE NOT FOUND</h2>
+    </mat-card>
+  </div>
+</div>
+
