fixed scaling issues, scoreboard leaderboard and added a logout button

--- a/frontend/src/app/game/chat/chat.component.html
+++ b/frontend/src/app/game/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #323232">
+<div style="background-color: #323232; height: 100%">
   <mat-list #chatList [scrollTop]="chatList.scrollHeight" style="height: 90vh;overflow-x: hidden; overflow-y: auto; -ms-word-break: break-all;word-break: break-all;: break-word; white-space: pre-line">
     <mat-list-item *ngFor="let message of chatData" style="color:white">
       {{message}}
