--- a/frontend/src/app/game/canvas/canvas.component.html
+++ b/frontend/src/app/game/canvas/canvas.component.html
@@ -1,3 +1,5 @@
 <div #canvasDiv style="width: 100%; height: 100%">
-  <canvas #canvas style="background-color: white"></canvas>
+  <canvas #canvas style="background-color: white;" width="1350px" height="750px">
+    If you are only seeing this text, your browser does not support HTML5 Canvas.
+  </canvas>
 </div>
