some styling on the frontend and fixed room issues

--- a/frontend/src/app/game/canvas/canvas.component.html
+++ b/frontend/src/app/game/canvas/canvas.component.html
@@ -1,4 +1,4 @@
-<div #canvasDiv style="width: 100%; height: 100%">
+<div #canvasDiv style="width: 100%; height: 100%;">
   <canvas #canvas style="background-color: white;" width="1350px" height="750px">
     If you are only seeing this text, your browser does not support HTML5 Canvas.
   </canvas>
