--- a/frontend/src/app/lobby/auth/register/register.component.html
+++ b/frontend/src/app/lobby/auth/register/register.component.html
@@ -64,7 +64,7 @@
 
         <div class="form-group">
           <mat-list >
-            <mat-list-item ><a routerLink="/signup" style="color:gray; font-size: 0.80em; margin: auto">Already have an account? Login!</a></mat-list-item>
+            <mat-list-item ><a routerLink="/login" style="color:gray; font-size: 0.80em; margin: auto">Already have an account? Login!</a></mat-list-item>
             <mat-list-item><button mat-raised-button style="margin: auto" type="submit" [disabled]="registerForm.invalid || registerForm.pending">Register</button>
             </mat-list-item>
           </mat-list>
