--- a/frontend/src/app/lobby/lobby.component.html
+++ b/frontend/src/app/lobby/lobby.component.html
@@ -1,10 +1,7 @@
-<div style="width: 100%; height: 100vh;background-color: #323232">
-  <div style="width: 80%; margin: auto; text-align: center; padding-top: 200px">
 
-  <mat-card style="width: 50%; margin: auto">
-    <router-outlet></router-outlet>
-  </mat-card>
-
+  <div class="outer">
+    <mat-card class="inner">
+      <router-outlet></router-outlet>
+    </mat-card>
   </div>
-</div>
 
