--- a/frontend/src/app/game/chat/chat.component.html
+++ b/frontend/src/app/game/chat/chat.component.html
@@ -1,13 +1,17 @@
-<div style="background-color: #323232; height: 100%">
-  <mat-list #chatList [scrollTop]="chatList.scrollHeight" style="height: 90vh;overflow-x: hidden; overflow-y: auto; -ms-word-break: break-all;word-break: break-all;: break-word; white-space: pre-line">
-    <mat-list-item *ngFor="let message of chatData" style="color:white">
-      {{message}}
-    </mat-list-item>
-  </mat-list>
-
-  <mat-form-field>
-  <input matInput #chat id="chat" type="text" (keyup.enter)="sendMessage(chat)" style="width: 70%; color:white">
-  </mat-form-field>
-  <button (click)="sendMessage(chat)" mat-raised-button style="width: 25%">Send</button>
-
+<div fxLayout="column" style="background-color: #323232; height: 100%;">
+  <div fxFlex="90%" fxFlex.xs="60%">
+    <mat-list #chatList [scrollTop]="chatList.scrollHeight" style="height: 85%; overflow-x: hidden; overflow-y: auto; -ms-word-break: break-all;word-break: break-all;: break-word; white-space: pre-line">
+      <mat-list-item *ngFor="let message of chatData" style="color:white">
+        {{message}}
+      </mat-list-item>
+    </mat-list>
+  </div>
+  <div fxFlex="10%" fxFlex.xs="40%">
+    <div style="width: 100%;">
+      <mat-form-field style="width: 90%">
+        <input matInput #chat id="chat" type="text" (keyup.enter)="sendMessage(chat)" style="color:white">
+      </mat-form-field>
+      <i (click)="sendMessage(chat)" class="material-icons" style="color: white; width: 10%; cursor: pointer">send</i>
+    </div>
+  </div>
 </div>
