--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,10 +1,10 @@
-<div style="width: 100%; height: 100vh; background: #323232 url('../../assets/background.jpeg') no-repeat center center fixed; background-size: cover">
-  <div style="width: 80%; margin: auto; text-align: center; padding-top: 200px">
-    <mat-card style="width: 50%; min-height: 50vh; margin: auto">
-      <h1>Welcome to Painterino!</h1>
-      <button mat-raised-button (click)="onPlay()">Play</button>
-      <button mat-raised-button (click)="onAbout()">About</button>
-    </mat-card>
+<div style="width: 100%; height: 100vh; background: #323232 ; background-size: cover">
+  <div style="width: 80%; margin: auto; text-align: center; padding-top: 50px">
+    <div style="width: 50%; margin: auto">
+      <h1>Painterino</h1>
+      <div><button mat-raised-button (click)="onPlay()">Play</button></div>
+      <div style="margin-top: 10px"><button mat-raised-button (click)="onAbout()">About</button></div>
+    </div>
 
   </div>
 </div>
