--- a/frontend/src/app/lobby/auth/login/login.component.html
+++ b/frontend/src/app/lobby/auth/login/login.component.html
@@ -34,7 +34,7 @@
           <div class="form-group">
             <mat-list >
               <mat-list-item ><a routerLink="/register" style="color:gray; font-size: 0.80em; margin: auto">Don't have an account? Register now!</a></mat-list-item>
-              <mat-list-item><a routerLink="/forgot-password" style="color:gray; font-size: 0.75em; margin: auto">I forgot my password.</a></mat-list-item>
+              <mat-list-item><a style="color:gray; font-size: 0.75em; margin: auto">I forgot my password.</a></mat-list-item>
               <mat-list-item><button mat-raised-button style="margin: auto" type="submit" [disabled]="logInForm.invalid || logInForm.pending">Login</button>
               </mat-list-item>
             </mat-list>
