--- a/frontend/src/app/lobby/room-list/room-list.component.html
+++ b/frontend/src/app/lobby/room-list/room-list.component.html
@@ -1,22 +1,40 @@
 
-
-<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" style="height: 40vh;">
+<div class="room-list" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
   <div fxFlex="60%" class="left-panel">
-    <mat-list class="room-list" style="overflow-y: auto; height: 100%">
-      <mat-list-item (click)="openJoin(room)" *ngFor="let room of activeRooms">
-        <mat-card style="width: 100%; margin-bottom: 20px">
+    <div *ngIf="activeRooms.length === 0">
+      <p style="color: gray; size: 0.75em;">There are no active rooms</p>
+    </div>
+    <mat-list style="overflow-y: auto; height: 100%">
+      <mat-list-item (click)="openJoin(room)" *ngFor="let room of activeRooms" style="padding-bottom: 30px">
+        <mat-card style="width: 100%;">
           <p style="margin: 0; padding: 0; display: inline-block">{{room.roomName}}</p>
           <p style="margin: 0; padding: 0; display: inline-block; float: right">{{room.slot}}</p>
         </mat-card>
       </mat-list-item>
     </mat-list>
   </div>
-  <div fxFlex="40%" class="right-panel" style="border-left: 1px solid rgba(0,0,0,.30)">
+  <div fxFlex="40%" class="right-panel">
     <mat-list style="position: relative; height: 100%">
-      <mat-list-item><button mat-raised-button (click)="openJoin('')">Join</button></mat-list-item>
-      <mat-list-item><button mat-raised-button>Enter Key</button></mat-list-item>
-      <mat-list-item><button mat-raised-button (click)="openCreate()">Create</button></mat-list-item>
-      <mat-list-item style="position: absolute; bottom: 0; width: 100%"><button mat-raised-button (click)="logOut()">Logout</button></mat-list-item>
+      <mat-list-item>
+        <button mat-raised-button (click)="openJoin('')">
+        <i class="material-icons" style="float: left; line-height: inherit">play_arrow</i> Join
+        </button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-raised-button (click)="openCreate()">
+        <i class="material-icons" style="float: left; line-height: inherit">add</i> Create
+        </button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-raised-button (click)="refreshList()" [disabled]="!isRefreshActive">
+          <i class="material-icons" style="float: left; line-height: inherit">refresh</i> Refresh
+        </button>
+      </mat-list-item>
+      <mat-list-item style="position: absolute; bottom: 0; width: 100%">
+        <button mat-raised-button (click)="logOut()">
+          <i class="material-icons" style="float: left; line-height: inherit">exit_to_app</i> Logout
+        </button>
+      </mat-list-item>
     </mat-list>
   </div>
 </div>
