--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,8 +2,12 @@
   <div style="width: 80%; margin: auto; text-align: center; padding-top: 50px">
     <div style="width: 50%; margin: auto">
       <h1>Painterino</h1>
-      <div><button mat-raised-button (click)="onPlay()">Play</button></div>
-      <div style="margin-top: 10px"><button mat-raised-button (click)="onAbout()">About</button></div>
+      <div>
+        <button mat-raised-button (click)="onPlay()">Play</button>
+      </div>
+      <div style="margin-top: 10px">
+        <button mat-raised-button (click)="onAbout()">About</button>
+      </div>
     </div>
 
   </div>
