--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -1,8 +1,7 @@
-.left-panel{
+.left-panel {
   margin-left: 0.5%;
 }
 
-
-.right-panel{
-  border-left: 1px solid rgba(0,0,0,0.30)
+.right-panel {
+  border-left: 1px solid rgba(0, 0, 0, 0.30)
 }
